--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search PageVC-->
         <scene sceneID="ijG-6P-kLT">
             <objects>
-                <viewController id="xRk-5H-zbC" sceneMemberID="viewController">
+                <viewController id="xRk-5H-zbC" customClass="SearchPageVC" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7QL-vL-BoO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,10 +24,10 @@
             </objects>
             <point key="canvasLocation" x="-301" y="1010"/>
         </scene>
-        <!--View Controller-->
+        <!--Home PageVC-->
         <scene sceneID="xBu-I7-lex">
             <objects>
-                <viewController id="qnR-4K-4ve" sceneMemberID="viewController">
+                <viewController id="qnR-4K-4ve" customClass="HomePageVC" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="X8P-OF-rPu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -40,10 +40,10 @@
             </objects>
             <point key="canvasLocation" x="-301" y="281"/>
         </scene>
-        <!--View Controller-->
+        <!--Liked PageVC-->
         <scene sceneID="fiK-z3-ueR">
             <objects>
-                <viewController id="4rT-Z1-7lb" sceneMemberID="viewController">
+                <viewController id="4rT-Z1-7lb" customClass="LikedPageVC" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zdc-np-1vo">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
